[package]
name = "ff-profile"
version = "0.1.0"
description = "Prints path to your default Firefox profile"
authors = ["Oleksii Filonenko <brightone@protonmail.com>"]
homepage = "https://github.com/filalex77/ff-profile"
documentation = "https://docs.rs/ff-profile"
repository = "https://github.com/filalex77/ff-profile"
readme = "README.md"
keywords = ["firefox", "profile"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
dirs = "2.0.2"
rust-ini = "0.13.0"
snafu = "0.5.0"
